--- a/views/productioninventory/productioninventory.ejs
+++ b/views/productioninventory/productioninventory.ejs
@@ -42,7 +42,7 @@
                     <thead class="table-header">
                         <tr>
                             <th class = "col-1">Inventory ID</th>
-                            <th class = "col-1">Product ID</th>
+                            <th class = "col-1">Product Name (ID)</th>
                             <th class = "col-1">Quantity</th>            
                         </tr>
                     </thead>
