--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -218,6 +218,9 @@
         <a class="collapse-item" href="/transferorder">
           <span>Transfer Orders</span>
         </a>
+        <a class="collapse-item" href="/productiontransfer">
+          <span>Production Transfer</span>
+        </a>
       </div>
     </div>
   </li>
