--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -82,7 +82,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row d-flex justify-content-center">
+                        <div class="row">
                             <div class="col-md-6 mmb">
                                 <div class="input-group">
                                     <select class="form-control text-center" name="employeelist" id="employeelist">
@@ -90,6 +90,16 @@
                                     </select>    
                                     <div class="input-group-append">
                                         <span class="input-group-text label-width-2" id="basic-addon2">Employee ID</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mmb">
+                                <div class="input-group">
+                                    <select class="form-control text-center" name="branchlist" id="branchlist">
+                                        <option value="">-- Select Branch --</option>
+                                    </select>    
+                                    <div class="input-group-append">
+                                        <span class="input-group-text label-width-2" id="basic-addon2">Branch ID</span>
                                     </div>
                                 </div>
                             </div>
@@ -154,6 +164,7 @@
                         <th class = "col-1">Access Type</th>
                         <th class = "col-2">Position Type</th>
                         <th class = "col-1">Username</th>
+                        <th class = "col-1">Branch ID</th>
                         <th class = "col-2">Created by</th>
                         <th class = "col-2">Created date</th>
                         <th class = "col-1">Status</th>
